ChangeLog (UTF-8, ff=dos)
Visual Novel Reader
Since 6/18/2011

2/17/2015 TUE
  [Internet]
  * Certain Internet requests, such as query game database when adding new games,
    query online machine translation, etc, will timeout after 7 seconds so that
    VNR will not hang waiting for the request to finish.
    想查询数据库和在线翻译等操作，会在7秒钟之后自行终止。
    来防止因为网络问题而让VNR卡在比如添加游戏等操作中。

  [UI]
  * Add an option in Preferences/UI to change VNR's default font.
    在【使用偏好/界面】中，可以修改VNR默认的字体。

2/14/2015 SAT
  [Game Engine]
  * Modify ApRicoT engine so that the scenario thread won't split and variate on each launch.
    Be careful that there are usually two threads for ApRicoT, and only one of them is correct.
    The other one sometimes is right, but sometimes has repetition.
    Thanks for @Reality sama 's report!

  [Shared Dictionary]
  * You can use HTML escaped entities in the pattern and translation.
    For example, VNR by default will trim spaces for the pattern and translation.
    You can use &nbsp; to force prepending/appending space.

    You can also use it to express unprintable characters without enabling regex.
    For example, ASCII 13 (Carriage Return, or CR) can be expressed as "&#13;".

    可以用HTML的转义语法来插入空格(&nbsp;)什么的。
    另外，也可以使用&#d的语法来插入如法输入的字符，而不必再使用打开正则表达的\u语法，
    比如：ASCII 13 (Carriage Return, or CR) 可以使用"&#13;"来表示。

  * Add a "&eos;" (end-of-sentence) special symbol, which can be used to force VNR to break input text
    into sentences and translate them independently.
    For example, given:

        みおちゃん、スラマッパギ！

    If define the following rule:

        Type: input
        Pattern: 、
        Translation: 、&eos;

    Then VNR will translate "みおちゃん、" and "スラマッパギ！"  independently.

    Note: Under the water, VNR will replace "&eos;" by "…eos…", so that {{bos}}/{{eos}}/{{boc}}/{{eoc}}
    macros won't be broken (because :bos:/:eos: also contains "…").

    可以用&eos;的符号来强制VNR断句，分别翻译分断后的句子。
    比方说，给定：

        みおちゃん、スラマッパギ！

    如果给定如下词条：

        类型: 输入