@@ -1,5 +1,6 @@
 :: Update (Debug).cmd
 :: 11/1/2012 jichi
+:: Debug update process.
 @echo off
 setlocal
 
