@@ -2,6 +2,15 @@ ChangeLog (UTF-8, ff=dos)
 Visual Novel Reader
 Since 6/18/2011
 
+2/18/2015 WED
+  [Script]
+  * Add a ld2db script in the Scripts folder which can be used to convert Lingoes
+    dictionary file to SQLite database.
+    For example:
+        ld2db "Vicon Japanese-English Dictionary.ld2" utf16 utf8
+    will output a db for Vicon dictionary where Japanese is encoded in UTF-16 and
+    English is encoded in UTF-8.
+
 2/17/2015 TUE
   [Internet]
   * Certain Internet requests, such as query game database when adding new games,
